--- a/view/projects.html
+++ b/view/projects.html
@@ -9,11 +9,11 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
-        <link rel="icon" type="image/png" href="./images/Bag.png">
+        <link rel="icon" type="image/png" href="../img/favicon_penguin.png">
 
         <!--========== CSS ==========-->
-        <link rel="stylesheet" href="styles.css">
-        <link rel="stylesheet" href = "projects.css">
+        <link rel="stylesheet" href="../styles.css">
+        <link rel="stylesheet" href = "./public/css/projects.css">
 
         <title>Devcation 2022: Projects</title>
     </head>
@@ -30,11 +30,12 @@
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
-                        <li class="nav__item"><a href="landingpage.html" class="nav__link active-link">Theme</a></li>
-                        <li class="nav__item"><a href="landingpage.html" class="nav__link">Events</a></li>
-                        <li class="nav__item"><a href="landingpage.html" class="nav__link">Timeline</a></li>
+                        <li class="nav__item"><a href="../index.html" class="nav__link active-link">Theme</a></li>
+                        <li class="nav__item"><a href="../index.html" class="nav__link">Events</a></li>
+                        <li class="nav__item"><a href="../index.html" class="nav__link">Timeline</a></li>
                         <li class="nav__item"><a href="" class="nav__link">Sponsors</li>
-                        <li class="nav__item"><a href="landingpage.html" class="nav__link">Contact Us</a></li>    
+                        <li class="nav__item"><a href="./team.html" class="nav__link">Team</a></li> 
+                        <li class="nav__item"><a href="./comingsoon.html" class="nav__link">Projects</a></li>     
                         <li><i class='bx bx-toggle-left change-theme' id="theme-button"></i></li>
                     </ul>
                 </div>
@@ -221,6 +222,6 @@
         <script src="https://unpkg.com/scrollreveal"></script>
 
         <!--========== MAIN JS ==========-->
-        <script src="main.js"></script>
+        <script src="../main.js"></script>
     </body>
 </html>
