--- a/view/projects.html
+++ b/view/projects.html
@@ -26,7 +26,7 @@
         <!--========== HEADER ==========-->
         <header class="l-header" id="header">
             <nav class="nav bd-container">
-                <a href="#home" class="nav__logo">Devcation 2022</a>
+                <a href="../index.html" class="nav__logo">Devcation 2022</a>
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
