--- a/styles.css
+++ b/styles.css
@@ -1000,3 +1000,11 @@ time {
 .slick-arrow.slick-hidden {
   display: none;
 }
+
+.rules_list{
+  list-style-type:disc;
+}
+
+.space_needed{
+  margin-top:50px;
+}
