--- a/view/team.html
+++ b/view/team.html
@@ -131,7 +131,7 @@
                                     </div>
                                     <div class="s-link">
                                         <a href="https://www.linkedin.com/in/nishtha0801/"><i class="fa fa-linkedin"></i></a>
-                                        <a href="https://twitter.com/VaniChitkara"><i class="fa fa-twitter"></i></a>
+                                        <!-- <a href="https://twitter.com/VaniChitkara"><i class="fa fa-twitter"></i></a> -->
                                         <a href="https://www.instagram.com/nishtha_goyal_8/"><i class="fa fa-instagram"></i></a>
                                     </div>
                                 </div>
@@ -259,6 +259,29 @@
                             </div>
                             <div class="team-title">
                                 <h5>Anshika Gautam</h5>
+                                <span>Website Team</span>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4 col-sm-4 team-card">
+                            <div class="team-member">
+                                <div class="team-img">
+                                    <img src="../img/Team/Shatakshi_Verma - Shatakshi Verma.jpg" alt="team member" class="img-responsive">
+                                </div>
+                                <div class="team-hover">
+                                    <div class="desk">
+                                        <h4>Hi There !</h4>
+                                        <p>Love to explore the world of tech!</p>
+                                    </div>
+                                    <div class="s-link">
+                                        <a href="https://www.linkedin.com/in/shatakshi-verma-708426200/"><i class="fa fa-linkedin"></i></a>
+                                        <a href="https://twitter.com/shatakshi_024"><i class="fa fa-twitter"></i></a>
+                                        <a href="https://www.instagram.com/shatakshi24verma/"><i class="fa fa-instagram"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="team-title">
+                                <h5>Shatakshi Verma</h5>
                                 <span>Website Team</span>
                             </div>
                         </div>
@@ -527,6 +550,52 @@
                             </div>
                             <div class="team-title">
                                 <h5>Deekshita Verma</h5>
+                                <span>Event Management Team</span>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4 col-sm-4 team-card">
+                            <div class="team-member">
+                                <div class="team-img">
+                                    <img src="../img/Team/Remini20220213013213787 - Gaurikaa Kathpalia.jpg" alt="team member" class="img-responsive">
+                                </div>
+                                <div class="team-hover">
+                                    <div class="desk">
+                                        <h4>Hi There !</h4>
+                                        <p>An enthusiastic being passionate about tech and entrepreneurship.</p>
+                                    </div>
+                                    <div class="s-link">
+                                        <a href="https://www.linkedin.com/in/gaurikaakathpalia/"><i class="fa fa-linkedin"></i></a>
+                                        <a href="https://twitter.com/Gaurikaa2"><i class="fa fa-twitter"></i></a>
+                                        <a href="https://www.instagram.com/gaurikaagossips/"><i class="fa fa-instagram"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="team-title">
+                                <h5>Gaurikaa Kathpalia</h5>
+                                <span>Event Management Team</span>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4 col-sm-4 team-card">
+                            <div class="team-member">
+                                <div class="team-img">
+                                    <img src="../img/Team/Sanju.jpeg" alt="team member" class="img-responsive">
+                                </div>
+                                <div class="team-hover">
+                                    <div class="desk">
+                                        <h4>Hi There !</h4>
+                                        <p>I am Sanju, Sophomore at IGDTUW. I am passionate about Full Stack Wed Development and helping in communities.</p>
+                                    </div>
+                                    <div class="s-link">
+                                        <a href="https://www.linkedin.com/in/sanju001/"><i class="fa fa-linkedin"></i></a>
+                                        <a href="https://twitter.com/Sanju_120"><i class="fa fa-twitter"></i></a>
+                                        <a href="https://www.instagram.com/sanju34300/"><i class="fa fa-instagram"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="team-title">
+                                <h5>Sanju</h5>
                                 <span>Event Management Team</span>
                             </div>
                         </div>
