--- a/view/hacksolve.html
+++ b/view/hacksolve.html
@@ -195,6 +195,9 @@
                         </div>
                 </section>
 
+                <section class="decoration section bd-container">    
+                </section>
+
             
             <!--========== FOOTER (Socials) ==========-->
             <section class="footer " id="contact_us">
