--- a/view/speakers.html
+++ b/view/speakers.html
@@ -193,7 +193,7 @@
                                 <div class="team-hover">
                                     <div class="desk">
                                         <h4>Hi There !</h4>
-                                        <p>Open Source Lead at GDSC IGDTUW </p>
+                                        <p>Open Source enthusiast and an aspiring web developer </p>
                                     </div>
                                     <div class="s-link">
                                         <a href="https://www.linkedin.com/in/gunjan-gupta-225713200/"><i class="fa fa-linkedin"></i></a>
@@ -204,7 +204,7 @@
                             </div>
                             <div class="team-title">
                                 <h5>Gunjan Gupta</h5>
-                                <span>GDSC-IGDTUW Outreach Lead</span>
+                                <span>GDSC-IGDTUW Open Source Lead</span>
                             </div>
                         </div>
 
