--- a/styles.css
+++ b/styles.css
@@ -213,6 +213,8 @@ img {
   cursor: pointer;
 }
 
+
+
 /* Show menu */
 .show-menu {
   top: calc(var(--header-height) + 1rem);
@@ -377,6 +379,12 @@ img {
   width: 300px !important;
 }
 
+@media screen and (max-width: 576px) {
+  .about__GDSC{
+    text-align: center;
+  }
+}
+
 /*========== ACCESSORIES ==========*/
 .accessory__container {
   grid-template-columns: repeat(2, 1fr);
@@ -520,11 +528,11 @@ img {
   color: var(--first-color);
 }
 
-.footer__logo:hover{
+.footer__logo:hover {
   color: var(--first-color-send);
 }
 
-.footer__icons{
+.footer__icons {
   display: flex;
   justify-content: center;
 }
@@ -895,116 +903,39 @@ time {
 }
 
 /* =========Sponsors============ */
-
-#sponsors div h1 {
-  font-weight: var(--font-bold);
-  font-size: var(--h2-font-size);
+#sponsor{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-/* Slider */
-
-.slick-slide {
-  margin: 50px 0 10px 20px;
+.sponsor-logo {
+  display: flex ;
+  flex-wrap: wrap ;
+  justify-content: center;
+  align-items: center;
 }
 
-.slick-slide img {
-  width: 100%;
+.sponsor-logo img {
+  background-color: white;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
+  margin: var(--mb-2);
+  padding: var(--mb-3);
+  border-radius: 0.6rem;
 }
 
-.slick-slider {
-  position: relative;
-  display: block;
-  box-sizing: border-box;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  -webkit-touch-callout: none;
-  -khtml-user-select: none;
-  -ms-touch-action: pan-y;
-  touch-action: pan-y;
-  -webkit-tap-highlight-color: transparent;
+.sponsor-container {
+  margin: 5% 10%; 
+  width: 60%;
 }
 
-.slick-list {
-  position: relative;
-  display: block;
-  overflow: hidden;
-  margin: 0;
-  padding: 0;
-}
-.slick-list:focus {
-  outline: none;
-}
-.slick-list.dragging {
-  cursor: pointer;
-  cursor: hand;
+@media screen and (max-width: 576px) {
+
+  .sponsor-logo img{
+    width: 45%;
+    padding: var(--mb-2);
+    margin: var(--mb-1);
+  }
 }
 
-.slick-slider .slick-track,
-.slick-slider .slick-list {
-  -webkit-transform: translate3d(0, 0, 0);
-  -moz-transform: translate3d(0, 0, 0);
-  -ms-transform: translate3d(0, 0, 0);
-  -o-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-}
-
-.slick-track {
-  position: relative;
-  top: 0;
-  left: 0;
-  display: block;
-}
-.slick-track:before,
-.slick-track:after {
-  display: table;
-  content: "";
-}
-.slick-track:after {
-  clear: both;
-}
-.slick-loading .slick-track {
-  visibility: hidden;
-}
-
-.slick-slide {
-  display: none;
-  float: left;
-  height: 100%;
-  min-height: 1px;
-}
-[dir="rtl"] .slick-slide {
-  float: right;
-}
-.slick-slide img {
-  display: block;
-}
-.slick-slide.slick-loading img {
-  display: none;
-}
-.slick-slide.dragging img {
-  pointer-events: none;
-}
-.slick-initialized .slick-slide {
-  display: block;
-}
-.slick-loading .slick-slide {
-  visibility: hidden;
-}
-.slick-vertical .slick-slide {
-  display: block;
-  height: auto;
-  border: 1px solid transparent;
-}
-.slick-arrow.slick-hidden {
-  display: none;
-}
-
-.rules_list{
-  list-style-type:disc;
-}
-
-.space_needed{
-  margin-top:50px;
-}
