devfolio button added

--- a/view/hacksolve.html
+++ b/view/hacksolve.html
@@ -55,7 +55,12 @@
                     <div class="home__data">
                         <h1 class="home__title">Hack 'N' Solve</h1>
                         <p class="home__description">blah blah blah</p>
-                        
+                        <div 
+                          class="apply-button" 
+                          data-hackathon-slug="hack-n-solve" 
+                          data-button-theme="light"
+                          style="height: 44px; width: 312px"
+                        ></div>
                     </div>   
                 </div>
             </section>
