--- a/view/ideatesolve.html
+++ b/view/ideatesolve.html
@@ -54,8 +54,14 @@
 
                     <div class="home__data">
                         <h1 class="home__title">Ideate 'N' Solve</h1>
-                        <p class="home__description">blah blah blah</p>
-                        
+                        <p class="home__description">The second part of the triathlon will witness the
+                            participation of folks who wish to do solve problems
+                            pertaining to the UN's 17 SDGs. This event will ensure
+                            teams have a clear perspective on the problem they
+                            are trying to solve, the solution they're coming up with,
+                            it's need in the market, business prospect and
+                            utilisation of Google technologies.</p>
+                        <div class="button"><a href="../view/comingsoon.html" class="button-link" style="color:white">Register Here</a></div>
                     </div>   
                 </div>
             </section>
@@ -70,11 +76,11 @@
                                 <li>There will be 2 to 4 people in one team.</li>
                                 <li>The theme for the event will be the UN's 17 Sustainable Development Goals.</li>
                                 <li>Deadline to Register: 27th February 2022</li>
-                                <li>An email with the entire structure of the designathon will be sent to the registered teams by 28th February 2022</li>
-                                <li>Teams will be invited on a sync call with the mentor assigned to them on 02nd March 2022.</li>
-                                <li>There will be 2 mini-events on 03rd and 04th March 2022 for which separate prizes will be awarded to the winners.</li>
-                                <li>Final submission deadline is 11:59 PM on 05th March 2022.</li>
-                                <li>The judging criteria will be creativity, novelty, features, ease of implementation, aesthetic and its contribution and relevance to UN's 17 SDGs.</li>
+                                <li>An email with the entire structure of the ideathon will be sent to the registered teams by 28th February 2022</li>
+                                <li>There will be a total of 2 rounds for the participants.</li>
+                                <li>The first round will serve as an elimination round post which Top 10 teams will be selected.</li>
+                                <li>During the second round, teams will have to present their ideas live in front of our judging panel and respond to interjections.</li>
+                                <li>The judging criteria will be creativity, novelty, features, ease of implementation, practicality, usage of Google technologies in the technical stack and its contribution and relevance to UN's 17 SDGs.</li>
                             </ul>
                         </p>
                     </div>
