--- a/view/comingsoon.html
+++ b/view/comingsoon.html
@@ -56,11 +56,11 @@
                     <div class="send__content">
                         <h2 class="section-title-center send__title">Coming Soon &#x1F527;</h2>
                         <p class="send__description">We are working on this, meanwhile, take a look at our events below.</p>
-                        <a href="#" class="button" style="margin-bottom:2vh">Ideathon</a>
+                        <a href="./ideatesolve.html" class="button" style="margin-bottom:2vh">Ideathon</a>
                         <br>
-                        <a href="#" class="button" style="margin-bottom:2vh">Designathon</a>
+                        <a href="./designsolve.html" class="button" style="margin-bottom:2vh">Designathon</a>
                         <br>
-                        <a href="#" class="button" style="margin-bottom:2vh">Hackathon</a>
+                        <a href="./hacksolve.html" class="button" style="margin-bottom:2vh">Hackathon</a>
                         <!--<form action="">
                             <div class="send__direction">
                                 <input type="text" placeholder="Type Message" class="send__input">
