--- a/view/hacksolve.html
+++ b/view/hacksolve.html
@@ -54,7 +54,7 @@
 
                     <div class="home__data">
                         <h1 class="home__title">Hack 'N' Solve</h1>
-                        <p class="home__description">blah blah blah</p>
+                        <p class="home__description">Hack'n'Solve, the third and final part of the triathlon, is a 36 Hours Virtual Hackathon where we aim to promote Hackers and help them nurture their new ideas and prototypes to solve one or more of the 17 sustainable development goals by the United Nations. </p>
                         <div 
                           class="apply-button" 
                           data-hackathon-slug="hack-n-solve" 
@@ -74,12 +74,10 @@
                             <ul class="rules_list">
                                 <li>There will be 2 to 4 people in one team.</li>
                                 <li>The theme for the event will be the UN's 17 Sustainable Development Goals.</li>
-                                <li>Deadline to Register: 27th February 2022</li>
-                                <li>An email with the entire structure of the designathon will be sent to the registered teams by 28th February 2022</li>
-                                <li>Teams will be invited on a sync call with the mentor assigned to them on 02nd March 2022.</li>
-                                <li>There will be 2 mini-events on 03rd and 04th March 2022 for which separate prizes will be awarded to the winners.</li>
-                                <li>Final submission deadline is 11:59 PM on 05th March 2022.</li>
-                                <li>The judging criteria will be creativity, novelty, features, ease of implementation, aesthetic and its contribution and relevance to UN's 17 SDGs.</li>
+                                <li>Deadline to Register: 11th March 2022</li>
+                                <li>Round 1 will end at 12:00pm on 13th March 2022</li>
+                                <li>10 shortlisted teams will be invited to give a live demonstration in front of the judges later in the evening on 13th March 2022.</li>
+                                <li>Judging Criteria will be theme, presentation, usage of Google technologies, aesthetic, completeness, accuracy, user experience and creativity.</li>
                             </ul>
                         </p>
                     </div>
@@ -233,6 +231,8 @@
 
         <!-- Sponsors -->
         <script src="../public/js/sponsors.js"></script>
+
+        <script defer async src="https://apply.devfolio.co/v2/sdk.js"></script>
     </body>
 
 </html>
