--- a/view/hacksolve.html
+++ b/view/hacksolve.html
@@ -56,7 +56,7 @@
                         <h1 class="home__title">Hack 'N' Solve</h1>
                         <p class="home__description">Hack'n'Solve, the third and final part of the triathlon, is a 36 Hours Virtual Hackathon where we aim to promote Hackers and help them nurture their new ideas and prototypes to solve one or more of the 17 sustainable development goals by the United Nations. </p>
                         <div 
-                          class="apply-button" 
+                          class="apply-button devfolio-btn" 
                           data-hackathon-slug="hack-n-solve" 
                           data-button-theme="light"
                           style="height: 44px; width: 312px"
