--- a/view/team.html
+++ b/view/team.html
@@ -26,17 +26,17 @@
         <!--========== HEADER ==========-->
         <header class="l-header" id="header">
             <nav class="nav bd-container">
-                <a href="../index.html" class="nav__logo">Devcation 2022</a>
+                <a href="../index.html" class="nav__logo"><- Back to Home</a>
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
-                        <li class="nav__item"><a href="../index.html" class="nav__link active-link">Theme</a></li>
-                        <li class="nav__item"><a href="../index.html" class="nav__link">Events</a></li>
-                        <li class="nav__item"><a href="../index.html" class="nav__link">Timeline</a></li>
-                        <li class="nav__item"><a href="" class="nav__link">Sponsors</li>
-                        <li class="nav__item"><a href="./team.html" class="nav__link">Team</a></li> 
-                        <li class="nav__item"><a href="./comingsoon.html" class="nav__link">Projects</a></li>    
-                              
+                        <li class="nav__item"><a href="#organizers" class="nav__link active-link">Organizers</a></li>
+                        <li class="nav__item"><a href="#web" class="nav__link ">Web</a></li>
+                        <li class="nav__item"><a href="#content" class="nav__link">Content</a></li>
+                        <li class="nav__item"><a href="#event" class="nav__link">Event Mgmt</a></li>
+                        <li class="nav__item"><a href="#pr" class="nav__link">PR</a></li>
+                        <li class="nav__item"><a href="#hr" class="nav__link">HR</a></li>
+                        <li class="nav__item"><a href="#sponsorship" class="nav__link">Sponsorship</a></li> 
                         <li><i class='bx bx-toggle-left change-theme' id="theme-button"></i></li>
                     </ul>
                 </div>
@@ -71,7 +71,7 @@
                 <div class="container bd-container">
                     <div class="row">
                         <div class="heading-title text-center team__head">
-                            <h2 class="section-team-center">Our Organisers </h2>
+                            <h2 class="section-team-center" id="organizers">Our Organisers </h2>
                             <!-- <p class="p-top-30 half-txt">Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend. </p> -->
                         </div>
 
@@ -105,7 +105,7 @@
                                 <div class="team-hover">
                                     <div class="desk">
                                         <h4>Hi There !</h4>
-                                        <p>Doing many things at a time is my thing!</p>
+                                        <p>Technology for the greater good is my motto!</p>
                                     </div>
                                     <div class="s-link">
                                         <a href="https://www.linkedin.com/in/pooja-gera/"><i class="fa fa-linkedin"></i></a>
@@ -210,10 +210,10 @@
 
                     </div>
 
-
+                    
                     <div class="row">
                         <div class="heading-title text-center team__head">
-                            <h2 class="section-team-center">Website Team</h2>
+                            <h2 class="section-team-center" id="web">Website Team</h2>
                             <!-- <p class="p-top-30 half-txt">Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend. </p> -->
                         </div>
 
@@ -290,7 +290,7 @@
 
                     <div class="row">
                         <div class="heading-title text-center team__head">
-                            <h2 class="section-team-center">Content Team</h2>
+                            <h2 class="section-team-center" id="content">Content Team</h2>
                             <!-- <p class="p-top-30 half-txt">Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend. </p> -->
                         </div>
 
@@ -366,7 +366,7 @@
 
                     <div class="row">
                         <div class="heading-title text-center team__head">
-                            <h2 class="section-team-center">Event Management Team</h2>
+                            <h2 class="section-team-center" id="event">Event Management Team</h2>
                             <!-- <p class="p-top-30 half-txt">Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend. </p> -->
                         </div>
 
@@ -604,7 +604,7 @@
 
                     <div class="row">
                         <div class="heading-title text-center team__head">
-                            <h2 class="section-team-center">PR Team</h2>
+                            <h2 class="section-team-center" id="pr">PR Team</h2>
                             <!-- <p class="p-top-30 half-txt">Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend. </p> -->
                         </div>
 
@@ -704,7 +704,7 @@
 
                     <div class="row">
                         <div class="heading-title text-center team__head">
-                            <h2 class="section-team-center">HR Team</h2>
+                            <h2 class="section-team-center" id="hr">HR Team</h2>
                             <!-- <p class="p-top-30 half-txt">Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend. </p> -->
                         </div>
 
@@ -781,7 +781,7 @@
 
                     <div class="row">
                         <div class="heading-title text-center team__head">
-                            <h2 class="section-team-center">Sponsorship Team</h2>
+                            <h2 class="section-team-center" id="sponsorship">Sponsorship Team</h2>
                             <!-- <p class="p-top-30 half-txt">Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend. </p> -->
                         </div>
 
