--- a/view/schedule.html
+++ b/view/schedule.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calendar</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../public/css/schedule.css">
   </head>
   <body>
     
@@ -51,6 +51,6 @@
 
     <div id="modalBackDrop"></div>
 
-    <script src="./script.js"></script>
+    <script src="../public/js/schedule.js"></script>
   </body>
 </html>
