--- a/view/projects.html
+++ b/view/projects.html
@@ -13,7 +13,7 @@
 
         <!--========== CSS ==========-->
         <link rel="stylesheet" href="../styles.css">
-        <link rel="stylesheet" href = "./public/css/projects.css">
+        <link rel="stylesheet" href = "../public/css/projects.css">
 
         <title>Devcation 2022: Projects</title>
     </head>
