--- a/view/team.html
+++ b/view/team.html
@@ -30,10 +30,10 @@
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
-                        <li class="nav__item"><a href="#organizers" class="nav__link active-link">Organizers</a></li>
-                        <li class="nav__item"><a href="#web" class="nav__link ">Web</a></li>
+                        <li class="nav__item"><a href="#organizers" class="nav__link">Organizers</a></li>
+                        <li class="nav__item"><a href="#web" class="nav__link">Web</a></li>
                         <li class="nav__item"><a href="#content" class="nav__link">Content</a></li>
-                        <li class="nav__item"><a href="#event" class="nav__link">Event Mgmt</a></li>
+                        <li class="nav__item"><a href="#event" class="nav__link">Event Management</a></li>
                         <li class="nav__item"><a href="#pr" class="nav__link">PR</a></li>
                         <li class="nav__item"><a href="#hr" class="nav__link">HR</a></li>
                         <li class="nav__item"><a href="#sponsorship" class="nav__link">Sponsorship</a></li> 
