Devfolio btn added, sponsor added

--- a/view/hacksolve.html
+++ b/view/hacksolve.html
@@ -60,7 +60,7 @@
                           data-hackathon-slug="hack-n-solve" 
                           data-button-theme="light"
                           style="height: 44px; width: 312px"
-                        ></div>
+                        ><iframe src="https://apply.devfolio.co/v2/button?hackathonSlug=hack-n-solve&amp;buttonTheme=light" title="Apply with Devfolio" class="devfolio-button-iframe" sandbox="allow-scripts allow-same-origin allow-top-navigation allow-top-navigation-by-user-activation" style="padding: 0px; border: 0px; margin: 0px; height: 44px; width: 312px;"></iframe></div>
                     </div>   
                 </div>
             </section>
