--- a/view/ideatesolve.html
+++ b/view/ideatesolve.html
@@ -61,7 +61,7 @@
                             are trying to solve, the solution they're coming up with,
                             it's need in the market, business prospect and
                             utilisation of Google technologies.</p>
-                        <div class="button"><a href="../view/comingsoon.html" class="button-link" style="color:white">Register Here</a></div>
+                        <div class="button"><a href="https://dare2compete.com/hackathon/ideatensolve-devcation-266047" class="button-link" style="color:white">Register Here</a></div>
                     </div>   
                 </div>
             </section>
