--- a/view/designsolve.html
+++ b/view/designsolve.html
@@ -55,7 +55,7 @@
                     <div class="home__data">
                         <h1 class="home__title">Design 'N' Solve</h1>
                         <p class="home__description">A Designathon you have never seen before. Packed with mentorship sessions, mini events and a lot of prizes up for grabs, Devcation's Design 'n' Solve will offer you a chance to learn and showcase your designing skills.</p>
-                        <div class="button"><a href="../view/comingsoon.html" class="button-link" style="color:white">Register Here</a></div>
+                        <div class="button"><a href="https://dare2compete.com/hackathon/designnsolve-devcation-indira-gandhi-delhi-technical-university-for-women-igdtuw-delhi-266079" class="button-link" style="color:white">Register Here</a></div>
                     </div>   
                 </div>
             </section>
