--- a/styles.css
+++ b/styles.css
@@ -1050,12 +1050,21 @@ time {
   margin-top:50px;
 }
 
+@media screen and (max-width: 1200px) {
+  .slick-slide{
+    padding: 1vh;
+    /* margin: 1vh; */
+    width: 50vw !important;
+    height: 18vw !important;
+  }  
+}
+
 @media screen and (max-width: 576px) {
 
   .sponsor-logo img{
     width: 45%;
     padding: var(--mb-2);
-    margin: var(--mb-1);
+    /* margin: var(--mb-1); */
   }
 
   .devfolio-btn{
