--- a/styles.css
+++ b/styles.css
@@ -1075,3 +1075,9 @@ time {
 .border{
   border: 1px solid black;
 }
+
+.prizes_list{
+  list-style-type: disc;
+  text-align: start;
+  padding-left:2vw;
+}
