--- a/view/designsolve.html
+++ b/view/designsolve.html
@@ -157,27 +157,76 @@
                     <div class="decoration__data">
                         <img src="../img/events/gold_trophy.png" alt="" class="decoration__img">
                         <h3 class="decoration__title">Winner</h3> 
-                        <p class="button button-link">Coming Soon</p>
+                        <p class="button button-link">
+                            <ul class="prizes_list">
+<li>3000 INR Cash Prize</li>
+<li>Gift vouchers from HoverRobotix Hoverboards India worth 10000/- INR</li>
+<li>Coupons worth 3000/- INR each for courses by Mentro</li>
+<li>Geeks for Geeks 2000/- INR Coupon on all courses</li>
+<li>$25 Coupon for Art of Problem Solving Online Classes</li>
+<li>Leading Learners Expansion Packs (valued at $100USD each)</li>
+<li>Professional Licenses of Voiceflow PRO valued at $50/month per account.</li>
+<li>$25 worth of Wolfram | One access for free</li>
+<li>Online Mock Interviews from Interview Buddy</li>
+<li>Full access licenses to full coding interview prep course by Interview Cake</li>
+<li>Lifetime upgrades of Taskade</li>
+<li>1-month FREE access to all Business Plan features of echo3D</li>
+<li>20% discount code for Rosenfeld</li>
+<li>The Wolfram Award</li>
+<li>Internship opportunities</li>
+
+                            </ul>
+                        </p>
                     </div>
 
                     <div class="decoration__data">
                         <img src="../img/events/silver_trophy.png" alt="" class="decoration__img">
                         <h3 class="decoration__title">1st Runner Up</h3>
-                        <p class="button button-link">Coming Soon</p>
+                        <p class="button button-link">
+                            <ul class="prizes_list">
+<li>2000 INR Cash Prize</li>
+<li>Coupons worth 3000/- INR each for courses by Mentro</li>
+<li>Geeks for Geeks 1200/- INR Coupon on all courses</li>
+<li>Professional Licenses of Voiceflow PRO valued at $50/month per account.</li>
+<li>$25 worth of Wolfram | One access for free</li>
+<li>Online Mock Interviews from Interview Buddy</li>
+<li>Full access licenses to full coding interview prep course by Interview Cake</li>
+<li>Lifetime upgrades of Taskade</li>
+<li>1-month FREE access to all Business Plan features of echo3D</li>
+<li>20% discount code for Rosenfeld</li>
+<li>Internship opportunities</li>
+
+                            </ul>
+                        </p>
                     </div>
 
                     <div class="decoration__data">
                         <img src="../img/events/bronze_trophy.png" alt="" class="decoration__img">
                         <h3 class="decoration__title">2nd Runner Up</h3>
-                        <p class="button button-link">Coming Soon</p>
+                        <p class="button button-link">
+                            <ul class="prizes_list">
+<li>1000 INR Cash Prize</li>
+<li>Coupons worth 3000/- INR each for courses by Mentro</li>
+<li>Geeks for Geeks 800/- INR Coupon on all courses</li>
+<li>Professional Licenses of Voiceflow PRO valued at $50/month per account.</li>
+<li>$25 worth of Wolfram | One access for free</li>
+<li>Online Mock Interviews from Interview Buddy</li>
+<li>Full access licenses to full coding interview prep course by Interview Cake</li>
+<li>Lifetime upgrades of Taskade</li>
+<li>1-month FREE access to all Business Plan features of echo3D</li>
+<li>20% discount code for Rosenfeld</li>
+<li>Internship opportunities</li>
+
+                            </ul>
+                        </p>
                     </div>
 
                     
-                    <div class="decoration__data">
+                    <!-- <div class="decoration__data">
                         <img src="../img/events/top10_certificate.png" alt="" class="decoration__img">
                         <h3 class="decoration__title">Top 10 Teams</h3> 
                         <p class="button button-link">Coming Soon</p>
-                    </div>
+                    </div> -->
         
                             <div class="decoration__data">
                                 <img src="../img/events/sponsor_star.png" alt="" class="decoration__img" >
@@ -188,7 +237,19 @@
                             <div class="decoration__data">
                                 <img src="../img/events/participation_certificate.png" alt="" class="decoration__img">
                                 <h3 class="decoration__title">Participation</h3>
-                                <p class="button button-link">Coming Soon</p>
+                                <p class="button button-link">
+                                    <ul class="prizes_list">
+<li>Geeks for Geeks 300/- INR Coupon on all courses</li>
+<li>Professional Licenses of Voiceflow PRO valued at $50/month per account.</li>
+<li>$25 worth of Wolfram | One access for free</li>
+<li>Interview Buddy discount vouchers</li>
+<li>Full access licenses to full coding interview prep course by Interview Cake</li>
+<li>Lifetime upgrades of Taskade</li>
+<li>1-month FREE access to all Business Plan features of echo3D</li>
+<li>20% discount code for Rosenfeld</li>
+
+                                    </ul>
+                                </p>
                             </div>
                     
                     
