--- a/view/hacksolve.html
+++ b/view/hacksolve.html
@@ -267,14 +267,64 @@
         
                             <div class="decoration__data">
                                 <img src="../img/events/sponsor_star.png" alt="" class="decoration__img" >
-                                <h3 class="decoration__title">Sponsor Track</h3>
-                                <p class="button button-link">Coming Soon</p>
+                                <h3 class="decoration__title">Polygon Track Prize</h3>
+                                <p class="button button-link">
+                                    <ul class="prizes_list">
+<li>₹10,000 for the best hack built on Ethereum</li>
+<li>₹15,000 for the best hack built on Ethereum + Polygon</li>
+<li>Eligibility to apply for internship/full-time roles and seed funding of up to 5,000 USD for winners!</li>
+                                    </ul>
+                                </p>
+                            </div>
+
+                            <div class="decoration__data">
+                                <img src="../img/events/sponsor_star.png" alt="" class="decoration__img" >
+                                <h3 class="decoration__title">Tezos Track Prize</h3>
+                                <p class="button button-link">
+                                    <ul class="prizes_list">
+<li>₹20,000 for best Dapp built on Tezos</li>
+<li>Continuity grant opportunity up to $5,000 for outstanding projects</li>
+                                    </ul>
+                                </p>
+                            </div>
+
+                            <div class="decoration__data">
+                                <img src="../img/events/sponsor_star.png" alt="" class="decoration__img" >
+                                <h3 class="decoration__title">Celo Track Prize</h3>
+                                <p class="button button-link">
+                                    <ul class="prizes_list">
+<li>₹20,000 for best Dapp built on Celo</li>
+<li>Continuity Support</li>
+                                    </ul>
+                                </p>
+                            </div>
+
+                            <div class="decoration__data">
+                                <img src="../img/events/sponsor_star.png" alt="" class="decoration__img" >
+                                <h3 class="decoration__title">Filecoin Track Prize</h3>
+                                <p class="button button-link">
+                                    <ul class="prizes_list">
+<li>₹20000 for best use of IPFS and/or Filecoin</li>
+                                    </ul>
+                                </p>
                             </div>
         
                             <div class="decoration__data">
                                 <img src="../img/events/participation_certificate.png" alt="" class="decoration__img">
                                 <h3 class="decoration__title">Participation</h3>
-                                <p class="button button-link">Coming Soon</p>
+                                <p class="button button-link">
+                                    <ul class="prizes_list">
+<li>Geeks for Geeks 300/- INR Coupon on all courses</li>
+<li>Professional Licenses of Voiceflow PRO valued at $50/month per account.</li>
+<li>$25 worth of Wolfram | One access for free</li>
+<li>Interview Buddy discount vouchers</li>
+<li>Full access licenses to full coding interview prep course by Interview Cake</li>
+<li>Lifetime upgrades of Taskade</li>
+<li>1-month FREE access to all Business Plan features of echo3D</li>
+<li>20% discount code for Rosenfeld</li>
+
+                                    </ul>
+                                </p>
                             </div>
                     
                     
