sponsor center fix

--- a/styles.css
+++ b/styles.css
@@ -996,6 +996,7 @@ time {
   display: flex;
   margin: 0 auto;
   align-items: center;
+  justify-content: center;
 }
 .slick-track:before,
 .slick-track:after {
