--- a/view/hacksolve.html
+++ b/view/hacksolve.html
@@ -231,6 +231,7 @@
                         <p class="button button-link">
                             <ul class="prizes_list">
                                 <li>1000 INR Cash Prize</li>
+                                <li>Coupons worth 3000/- INR each for courses by Mentro</li>
                                 <li>Geeks for Geeks 300/- INR Coupon on all courses</li>
                                 <li>Professional Licenses of Voiceflow PRO valued at $50/month per account.</li>
                                 <li>$25 worth of Wolfram | One access for free</li>
@@ -251,6 +252,7 @@
                         <p class="button button-link">
                             <ul class="prizes_list">
                                 <li>1000 INR Cash Prize</li>
+                                <li>Coupons worth 3000/- INR each for courses by Mentro</li>
                                 <li>Geeks for Geeks 300/- INR Coupon on all courses</li>
                                 <li>Professional Licenses of Voiceflow PRO valued at $50/month per account.</li>
                                 <li>$25 worth of Wolfram | One access for free</li>
