Adding Team Members

--- a/view/team.html
+++ b/view/team.html
@@ -286,6 +286,29 @@
                             </div>
                         </div>
 
+                        <div class="col-md-4 col-sm-4 team-card">
+                            <div class="team-member">
+                                <div class="team-img">
+                                    <img src="../img/Team/Simran_Saigal - Simran Saigal.jpg" alt="team member" class="img-responsive">
+                                </div>
+                                <div class="team-hover">
+                                    <div class="desk">
+                                        <h4>Hi There !</h4>
+                                        <p>Turning calories into code.</p>
+                                    </div>
+                                    <div class="s-link">
+                                        <a href="https://www.linkedin.com/in/simran-saigal"><i class="fa fa-linkedin"></i></a>
+                                        <a href="https://twitter.com/simsam0502?t=nRPnTbOpidJoN5Z4UcfvIw&s=09"><i class="fa fa-twitter"></i></a>
+                                        <!-- <a href="#"><i class="fa fa-instagram"></i></a> -->
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="team-title">
+                                <h5>Simran Saigal</h5>
+                                <span>Website Team</span>
+                            </div>
+                        </div>
+
                     </div>
 
                     <div class="row">
@@ -358,6 +381,50 @@
                             </div>
                             <div class="team-title">
                                 <h5>Harshita Rathee</h5>
+                                <span>Content Team</span>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-4 team-card">
+                            <div class="team-member">
+                                <div class="team-img">
+                                    <img src="../img/Team/Srishti_Vashistha - Srishti Vashistha.jpg" alt="team member" class="img-responsive">
+                                </div>
+                                <div class="team-hover">
+                                    <div class="desk">
+                                        <h4>Hi There !</h4>
+                                        <p>Hi, I'm Srishti and I am a flutter developer. I love participating in hackathons and learning new things!</p>
+                                    </div>
+                                    <div class="s-link">
+                                        <a href="https://www.linkedin.com/in/srishti-vashistha-0846161a0/"><i class="fa fa-linkedin"></i></a>
+                                        <a href="https://twitter.com/srishtiv27"><i class="fa fa-twitter"></i></a>
+                                        <a href="https://www.instagram.com/srishtiv27/"><i class="fa fa-instagram"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="team-title">
+                                <h5>Srishti Vashistha</h5>
+                                <span>Content Team</span>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-4 team-card">
+                            <div class="team-member">
+                                <div class="team-img">
+                                    <img src="../img/Team/rosalia - Rosalia SL.jpeg" alt="team member" class="img-responsive">
+                                </div>
+                                <div class="team-hover">
+                                    <div class="desk">
+                                        <h4>Hi There !</h4>
+                                        <p>Hi! I'm Rosalia, a programmer. I'm currently a mentor at the Flutter circle of GDSC IGDTUW!</p>
+                                    </div>
+                                    <div class="s-link">
+                                        <a href="https://www.linkedin.com/in/rosaliasl/"><i class="fa fa-linkedin"></i></a>
+                                        <a href="https://twitter.com/Rosalia_SL"><i class="fa fa-twitter"></i></a>
+                                        <a href="https://www.instagram.com/rosalia.sl/"><i class="fa fa-instagram"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="team-title">
+                                <h5>Rosalia Steffi Longjam</h5>
                                 <span>Content Team</span>
                             </div>
                         </div>
@@ -804,6 +871,29 @@
                             </div>
                             <div class="team-title">
                                 <h5>Sunidhi Chaudhary</h5>
+                                <span>Sponsorship Team</span>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4 col-sm-4 team-card">
+                            <div class="team-member">
+                                <div class="team-img">
+                                    <img src="../img/Team/Akanksha - Akanksha Singh.jpeg" alt="team member" class="img-responsive">
+                                </div>
+                                <div class="team-hover">
+                                    <div class="desk">
+                                        <h4>Hi There !</h4>
+                                        <p>I am a final year MCA student and currently interning at JP Morgan Chase & Co. I am also Flutter Circle Manager at DSC IGDTUW and love building mobile apps.</p>
+                                    </div>
+                                    <div class="s-link">
+                                        <a href="https://www.linkedin.com/in/akanksha1212/"><i class="fa fa-linkedin"></i></a>
+                                        <a href="https://twitter.com/coder_jedi"><i class="fa fa-twitter"></i></a>
+                                        <a href="https://www.instagram.com/akankshasingh1212/"><i class="fa fa-instagram"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="team-title">
+                                <h5>Akanksha Singh</h5>
                                 <span>Sponsorship Team</span>
                             </div>
                         </div>
