--- a/view/hacksolve.html
+++ b/view/hacksolve.html
@@ -266,6 +266,27 @@
                             </ul>
                         </p>
                     </div>
+
+                    <div class="decoration__data">
+                        <img src="../img/events/top10_certificate.png" alt="" class="decoration__img">
+                        <h3 class="decoration__title">Best All Girls Team</h3> 
+                        <p class="button button-link">
+                            <ul class="prizes_list">
+                                <li>1000 INR Cash Prize</li>
+                                <li>Coupons worth 3000/- INR each for courses by Mentro</li>
+                                <li>Geeks for Geeks 300/- INR Coupon on all courses</li>
+                                <li>Professional Licenses of Voiceflow PRO valued at $50/month per account.</li>
+                                <li>$25 worth of Wolfram | One access for free</li>
+                                <li>Online Mock Interviews from Interview Buddy</li>
+                                <li>Full access licenses to full coding interview prep course by Interview Cake</li>
+                                <li>Lifetime upgrades of Taskade</li>
+                                <li>1-month FREE access to all Business Plan features of echo3D</li>
+                                <li>20% discount code for Rosenfeld</li>
+                                <li>The Wolfram Award</li>
+                                <li>Internship opportunities</li>                                
+                            </ul>
+                        </p>
+                    </div>
         
                             <div class="decoration__data">
                                 <img src="../img/events/sponsor_star.png" alt="" class="decoration__img" >
