--- a/view/designsolve.html
+++ b/view/designsolve.html
@@ -228,11 +228,11 @@
                         <p class="button button-link">Coming Soon</p>
                     </div> -->
         
-                            <div class="decoration__data">
+                            <!-- <div class="decoration__data">
                                 <img src="../img/events/sponsor_star.png" alt="" class="decoration__img" >
                                 <h3 class="decoration__title">Sponsor Track</h3>
                                 <p class="button button-link">Coming Soon</p>
-                            </div>
+                            </div> -->
         
                             <div class="decoration__data">
                                 <img src="../img/events/participation_certificate.png" alt="" class="decoration__img">
